--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ st-gsheets-connection==0.1.0
 pandas==2.2.3
 numpy==2.2.5
 matplotlib==3.8.4
+oauth2client==4.1.3
+gspread==5.12.4
+gspread-dataframe==4.0.0
